--- a/portfolio/src/components/Projects.css
+++ b/portfolio/src/components/Projects.css
@@ -48,6 +48,13 @@
   overflow: hidden;
 }
 
+.project-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 .project-placeholder {
   width: 100%;
   height: 100%;
